--- a/cv.tex
+++ b/cv.tex
@@ -1,11 +1,49 @@
 \documentclass{cv_TOH}
- 
+
+\usepackage[letterpaper,top=3cm,bottom=3cm,left=2cm,right=2cm]{geometry}
+%eventually set this in cls
+
+\pagenumbering{gobble}
+
 \begin{document}
+
+\name{Timothy O. Hodson}
+\contact{123 Broadway}{London}{UK 12345}{tohodson@gmail.com}{(217)-493-5551}
  
 \section{Education}
-\subsection{University of Nowhere}
+\datedsubsection{Northern Illinois University}{2010--Present}
+\datedsubsection{PhD Geology}{In Progress}
+\datedsubsection{Certificate of Graduate Study in Geographic Information Analysis}{2014}
+\datedsubsection{M.S Geology -- Northern Illinois University}{2012}
+\datedsubsection{University of Wisconsin -- Madison}{2007}
+\datedsubsection{B.S. Geology and Geophysics}{2003--2007}
  
-\section{Work}
-\subsection{ABC Limited.}
+\section{Professional Experience}
+\datedsubsection{Northern Illinois University}{2008--Now}
+I have worked at ABC Limited from 2008 onwards.
+\datedsubsection{Illinois State Geological Survey}{2008--2009}
+\subsubsection{Research Assistant}
+Supported geolgists in surfcial mapping, aquifer characterization, and watershed characterization.
+
+\section{Other Experience}
+
+\section{Programming}
+Python, C, Matlab, R, JavaScript, BASH, HTML/CSS, SQL
+
+\section{Software}
+ArcGIS, Adobe Illustrator, QGIS, GRASS, Fledermaus, Unix utilities, and Microsoft Office
+\section{Experience}
+
+\section{References}
+\begin{tabular}{@{}p{5cm}p{5cm}p{5cm}}
+\textbf{Ross Powell}                    &  \textbf{Thomas Pingel}               & \textbf{John Winans}   \\
+Professor                               &  Asst. Professor                      &  Research Associate    \\
+Geology and Env. Geoscience             &  Geography                            &  Computer Science      \\
+Northern Illinois University            &  Northern Illinois University         &  Northern Illinois University \\
+DeKalb, Illinois                        &  DeKalb, Illinois                     &  DeKalb, Illinois  \\
+http://faculty.cs.niu.edu/~winans       & http://faculty.cs.niu.edu/~winans/    &  faculty.cs.niu.edu/~winans/ \\
+phone: \textsl{(815) 753-7952}          &  phone: \textsl{available on request} &  phone: \textsl{test}  \\
+e-mail: \textsl{available on request}   &  e-mail: \textsl{available on request}&  e-mail: test  \\
+\end{tabular}
  
 \end{document} 
