--- a/resume.tex
+++ b/resume.tex
@@ -8,12 +8,12 @@
 \begin{document}
 
 \name{Timothy O. Hodson}
-\contact{123 Broadway}{London}{UK 12345}{tohodson@gmail.com}{(217)-493-5551}
+\shortcontact{tohodson@gmail.com}{(217)-493-5551}
  
 \section{Education}
 \datedsubsection{Ph.D. Student in Geology -- Northern Illinois University}{In progress}
 \datedsubsection{Certificate of Graduate Study in Geographic Information Analysis}{2014}
-\datedsubsection{M.S Geology -- Northern Illinois University}}{2012}
+\datedsubsection{M.S Geology -- Northern Illinois University}{2012}
 \datedsubsection{B.S. Geology and Geophysics -- University of Wisconsin, Madison}{2007}
 
 \section{Research Interests}
@@ -27,13 +27,13 @@
 \datedsubsection{Research Assistant, Northern Illinois University}{2010--Present}
 
 \begin{itemize}
-\item NSF funded project to explore the aquatic and marine  beneath Whillans Ice-Stream, Antarctica. Responsibilities include operations and maintenance of oceanographic instruments, data acquisition and post-processing software development, and planning operations and logistics.
-\item Produced seafloor substrate and geoform maps for a joint USGS and Nature Conservancy project to map seafloor habitats in Puget Sound, Washington.
-\item Produced report and accompanying mapset for a joint USGS and Park Service project to map seafloor habitats in Glacier Bay, Alaska.
+\item Participant in \href{http://www.wissard.org}{WISSARD}, a NSF funded project to explore aquatic and marine environments beneath Whillans Ice Stream and Ross Ice Shelf, Antarctica. Responsibilities include operations and maintenance of oceanographic instruments, data acquisition and post-processing software development, and planning operations and logistics.
+\item Mapped seafloor habitats in Puget Sound, Washington by mining historical bathymetric surveys and seafloor observations. Resulting mapset are in review with USGS and are being used by the Nature Conservancy to inform the region's public and policy makers.
+\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats in Glacier Bay National Park using remotely sensed data and seafloor video observations in a maximum likelihood classifier. Resulting report and mapset published by USGS.}
 \end{itemize}
 
 \subsubsection{Teaching Assistant, Northern Illinois University}
-Teaching assistant for courses in introductory geology, global cycles, vertebrate paleontology and planetary and space science.
+Teaching assistant for courses in introductory geology, sedimentology, vertebrate paleontology and planetary and space science.
 
 \datedsubsection{Research Assistant, Illinois State Geological Survey}{2008--2009}
 
@@ -42,6 +42,7 @@ Supported geolgists in surfcial mapping, aquifer characterization, and watershed
 \section{Other Experience}
 \subsection{Mapping Intern -- NOAA}
 \subsection{STEMfest Volunteer}
+
 \section{Programming}
 \begin{itemize}
 \item Python, C, Matlab, R, BASH, JavaScript, SQL, HTML/CSS
@@ -50,7 +51,7 @@ Supported geolgists in surfcial mapping, aquifer characterization, and watershed
 \end{itemize}
 
 \section{Software}
-ArcGIS, Adobe Illustrator, QGIS, GRASS, Fledermaus, Unix utilities, and Microsoft Office
+ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, Unix utilities, Emacs, and Vim
 
 \section{References}
 \begin{tabular}{@{}p{6cm}p{6cm}p{6cm}}
@@ -60,7 +61,7 @@ Geology and Env. Geoscience           &  Geography                         &  Co
 Northern Illinois University          &  Northern Illinois University      &  Northern Illinois University \\
 DeKalb, Illinois                      &  DeKalb, Illinois                  &  DeKalb, Illinois  \\
 phone: 815.753.7952                   &  phone: 815.753.9208               &  phone: 815.753.5947  \\
-e-mail: \textsl{rpowell@niu.edu}      &  e-mail: \textsl{tpingel@niu.edu}  &  e-mail: jwinans@niu.edu   \\
+e-mail: rpowell@niu.edu               &  e-mail: tpingel@niu.edu           &  e-mail: jwinans@niu.edu   \\
                                       &  \url{www.tpingel.com}             &  \url{faculty.cs.niu.edu/~winans} \\
 \end{tabular}
 
