--- a/resume.tex
+++ b/resume.tex
@@ -1,39 +1,36 @@
 \documentclass{cv_TOH}
 
-\usepackage[letterpaper,top=1cm,bottom=1cm,left=2cm,right=2cm]{geometry}
+\usepackage[letterpaper,top=2cm,bottom=2cm,left=2cm,right=2cm]{geometry}
 \usepackage{hyperref}
-\usepackage{tikz}
-
-\newcommand{\Pointer}{\includegraphics[scale=0.5]{pointer.png}}%
 
 \pagenumbering{gobble}
 
 \begin{document}
 
 \name{Timothy O. Hodson}
-\shortcontact{tohodson@gmail.com}{(217)-493-5551}
-\centerline{\Pointer This document contains hyperlinks}
+\shortcontact{tohodson@gmail.com}{(217) 493-5551}
+\vspace{-0.2cm}
+\centerline{\footnotesize{[digital version of this document embeds links]}}
 
 \section{Education}
 \datedsubsection{\textbf{Ph.D. student in Geology} \textit{-- Northern Illinois University}}{In progress}
-\datedsubsection{Certificate of Graduate Study in Geographic Information Analysis}{2014}
-\datedsubsection{\textbf{M.S. Geology} \textit{-- Northern Illinois University}}{2012}
+\datedsubsection{\href{http://www.niu.edu/geog/giscert/graduate_certificate.shtml}{Certificate of Graduate Study in Geographic Information Analysis}}{2014}
+\datedsubsection{\href{http://gradworks.umi.com/15/28/1528822.html}{\textbf{M.S. Geology} \textit{-- Northern Illinois University}}}{2012}
 \datedsubsection{\textbf{B.S. Geology and Geophysics} \textit{-- University of Wisconsin, Madison}}{2007}
 
 \section{Research Interests}
 \begin{itemize}
-\item Reconstrucion of glacier and ice sheet dynamics from the sedimentary record.
+\item Reconstructing glacier and ice sheet dynamics from the sedimentary record.
 \item Application of remote sensing and geophysical data to surficial and seafloor mapping. 
 \end{itemize}
 
 \section{Professional Experience}
 
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
-
 \begin{itemize}
-\item \href{http://www.wissard.org}{Participant in WISSARD, a NSF funded project to explore environments beneath the Antarctic Ice Sheet. Responsibilities include operations and maintenance of oceanographic instruments, data acquisition and post-processing software development, and planning operations and logistics.}
-\item Mapped seafloor habitats of Puget Sound, Washington by fusing historical and modern datasets. Resulting maps will inform the region's public and policy makers to foster better conservation and management of Puget Sound.
-\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats in Glacier Bay National Park using remotely sensed data and seafloor video observations in a maximum likelihood classifier. Resulting report and mapset published by USGS.}
+\item \href{http://www.wissard.org}{Researcher and sensor technician for WISSARD, a NSF funded project to explore environments beneath the Antarctic Ice Sheet. }\href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013}
+\item Mapped seafloor habitats of Puget Sound, Washington by fusing historical and modern datasets. Resulting maps will inform public and policy makers in developing better conservation and management of Puget Sound.
+\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats in Glacier Bay National Park using remotely sensed data and seafloor video transects in a maximum likelihood classifier. Resulting report and mapset published by USGS.}
 \end{itemize}
 
 \datedsubsection{Teaching Assistant, \textit{Northern Illinois University}}{2010--2011}
@@ -43,21 +40,22 @@
 
 \datedsubsection{Research Assistant, \textit{Illinois State Geological Survey}}{2008--2009}
 \begin{itemize}
-\item \href{http://www.isgs.illinois.edu/sites/isgs/files/maps/isgs-quads/aurora-south-sg.pdf}{created geologic maps from LIDAR, drill cores and satellite imagery.}
-\item fieldwork around Illinois including geophysical surveying, stratigraphic drilling, well installation, and wetlands characterization 
+\item \href{http://www.isgs.illinois.edu/sites/isgs/files/maps/isgs-quads/aurora-south-sg.pdf}{Created geologic maps from LIDAR, geologic drill cores and satellite imagery.}
+\item Conducted fieldwork around Illinois including geophysical surveying, geologic drilling, and well installation for watershed and aquifer characterization. 
 \end{itemize}
 
 \section{Other Experience}
-\subsection{Mapping Intern -- NOAA}
-\href{http://www.niutoday.info/2014/04/17/niu-student-lands-coveted-internship-aboard-exploration-ship/}{Particpant in mapping cruise aboard NOAA's E/V Okeanos Explorer. Duties included QA and processing of data collected by the ship's swath and subbottom sonars.}
-\subsection{STEMfest Outreach Volunteer}
-Communicated importance of polar reasearch and organized educational activities for k-12 students.
+\begin{itemize}
+\item\href{http://www.niutoday.info/2014/04/17/niu-student-lands-coveted-internship-aboard-exploration-ship/}{Mapping intern aboard NOAA's E/V Okeanos Explorer. Duties included QA and processing of data collected by the ship's swath and subbottom sonars.}
+\item STEMfest volunteer communicating importance of polar reasearch and organizing educational outreach activities for k-12 students.
+\end{itemize}
 
 \section{Programming}
 \begin{itemize}
 \item Python, C, Matlab, R, BASH, JavaScript, SQL, HTML/CSS
 \item Relevant coursework in geospatial methods and modeling, web mapping, and network applications in C.
-\item Familiarity with common libraries for numerical programming, image analysis, geospatial analysis, statistics and machine learning
+\item Familiar with common libraries for numerical programming, data viz, geospatial analysis, and stats.
+\item \href{https://github.com/tohodson/velodyne_tools}{Wrote a LIDAR instrument driver in C as an independent study.}
 \end{itemize}
 
 \section{Software}
@@ -73,7 +71,7 @@ American Geophysical Union, Sigma Xi (Associate Member), Geological Society of A
  Geography                         &  Computer Science                 &   Geology and Env. Geoscience    \\
  Northern Illinois University      &  Northern Illinois University     &   Northern Illinois University   \\ 
  DeKalb, Illinois                  &  DeKalb, Illinois                 &   DeKalb, Illinois               \\
- phone: 815.753.9208               &  phone: 815.753.5947              &   phone: 815.753.7952            \\
+ phone: (815) 753-9208             &  phone: (815) 753-5947            &   phone: (815) 753-7952          \\
  e-mail: tpingel@niu.edu           &  e-mail: jwinans@niu.edu          &   e-mail: rpowell@niu.edu        \\
  \url{www.tpingel.com}             &  \url{faculty.cs.niu.edu/~winans} &                                  \\     
 \end{tabular}
