simplified and cleaned

--- a/resume.tex
+++ b/resume.tex
@@ -20,17 +20,17 @@
 
 \section{Research Interests}
 \begin{itemize}
-\item Reconstructing glacier and ice sheet dynamics from the sedimentary record.
-\item Application of remote sensing and geophysical data to surficial and seafloor mapping. 
+\item Sediment dynamics in glacial systems.
+\item Geospatial analysis and modeling of geological phenomena.
 \end{itemize}
 
 \section{Professional Experience}
 
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
 \begin{itemize}
-\item \href{http://www.wissard.org}{Researcher and sensor technician for WISSARD, a NSF funded project to explore environments beneath the Antarctic Ice Sheet. }\href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
-\item Mapped seafloor habitats of Puget Sound, Washington by fusing historical and modern data sets. Resulting maps will inform public and policy makers in developing better conservation and management of Puget Sound.
-\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats in Glacier Bay National Park using remotely sensed data and seafloor video transects in a maximum likelihood classifier. Resulting report and map set published by USGS.}
+\item \href{http://www.wissard.org}{Researcher and sensor technician for WISSARD, a NSF funded project to explore aquatic environments beneath the Antarctic Ice Sheet. }\href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
+\item Mapped seafloor habitats of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
+\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geomorphology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a statistical classifier. Resulting report and map set published by USGS.}
 \end{itemize}
 
 
@@ -55,18 +55,18 @@
 \item STEMfest volunteer communicating importance of polar research and organizing educational outreach activities for k-12 students.
 \end{itemize}
 
-\section{Programming}
+\section{Programming Experience}
 \begin{itemize}
 \item Python, C, Matlab, R, BASH, JavaScript, SQL, HTML/CSS
 \item Relevant coursework in geospatial methods and modeling, web mapping, and network applications in C.
-\item Familiar with common libraries for numerical programming, data viz, geospatial analysis, and stats.
+\item Familiar with common libraries for numerical programming, data viz, web mapping, geospatial analysis, and stats.
 \item \href{https://github.com/tohodson/velodyne_tools}{Wrote a LIDAR instrument driver in C as an independent study.}
 \end{itemize}
 
-\section{Software}
+\section{Software Experience}
 ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, Unix utilities, Emacs, and Vim
 
-\section{Professional organizations}
+\section{Professional Organizations}
 American Geophysical Union, Sigma Xi (Associate Member), Geological Society of America
 
 \section{References}
