--- a/resume.tex
+++ b/resume.tex
@@ -28,7 +28,7 @@
 
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
 \begin{itemize}
-\item \href{http://www.wissard.org}{Researcher and sensor technician for WISSARD, a NSF funded project to explore aquatic environments beneath the Antarctic Ice Sheet. }\href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
+\item \href{http://www.wissard.org}{Researcher and sensor technician for WISSARD, a NSF funded project to explore aquatic environments beneath the Antarctic Ice Sheet. }Contributed in development of aquisition software and sensor integration. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
 \item Mapped seafloor habitats of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
 \item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geomorphology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a statistical classifier. Resulting report and map set published by USGS.}
 \end{itemize}
@@ -46,7 +46,7 @@
 
 \datedsubsection{Academic Hourly, \textit{Illinois State Geological Survey}}{2008--2009}
 \begin{itemize}
-\item \href{http://www.isgs.illinois.edu/sites/isgs/files/maps/isgs-quads/aurora-south-sg.pdf}{Created geologic maps from LIDAR, geologic drill cores and satellite imagery.}
+\item \href{http://www.isgs.illinois.edu/sites/isgs/files/maps/isgs-quads/aurora-south-sg.pdf}{Prepared geologic maps from LIDAR data, drill cores and satellite imagery.}
 \item Conducted fieldwork around Illinois including geophysical surveying, geologic drilling, and well installation for watershed and aquifer characterization. 
 \end{itemize}
 
@@ -60,7 +60,7 @@
 \item Python, C, Matlab, R, BASH, JavaScript, SQL, HTML/CSS
 \item Relevant coursework in geospatial methods and modeling, web mapping, and network applications in C.
 \item Familiar with common libraries for numerical programming, data viz, web mapping, geospatial analysis, and stats.
-\item \href{https://github.com/tohodson/velodyne_tools}{Wrote a LIDAR instrument driver in C as an independent study.}
+\item \href{https://github.com/tohodson/velodyne_tools}{Developed drivers and hardware for a back mounted LIDAR to be used in mapping adverse environments.}
 \end{itemize}
 
 \section{Software Experience}
