honed research interest and soft skills

--- a/resume.tex
+++ b/resume.tex
@@ -21,14 +21,14 @@
 \section{Research Interests}
 \begin{itemize}
 \item Sediment dynamics in glacial systems.
-\item Geospatial analysis and modeling of geological phenomena.
+\item Application of remote sensing data and geospatial analysis to modeling geological phenomena.
 \end{itemize}
 
 \section{Professional Experience}
 
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
 \begin{itemize}
-\item \href{http://www.wissard.org}{Researcher and sensor technician for WISSARD, a NSF funded project to explore aquatic environments beneath the Antarctic Ice Sheet. }Contributed in development of aquisition software and sensor integration. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
+\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative and multi-institutional study to explore aquatic environments beneath the Antarctic Ice Sheet. }Worked closely with project engineers in development of aquisition software and sensor integration. Assisted chief scientist in planning field logistics and operations. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
 \item Mapped seafloor habitats of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
 \item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geomorphology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a statistical classifier. Resulting report and map set published by USGS.}
 \end{itemize}
@@ -59,12 +59,12 @@
 \begin{itemize}
 \item Python, C, Matlab, R, BASH, JavaScript, SQL, HTML/CSS
 \item Relevant coursework in geospatial methods and modeling, web mapping, and network applications in C.
-\item Familiar with common libraries for numerical programming, data viz, web mapping, geospatial analysis, and stats.
+\item Familiar with common libraries for numerical programming, data viz, web mapping, geospatial analysis, signal processing, and statistics.
 \item \href{https://github.com/tohodson/velodyne_tools}{Developed drivers and hardware for a back mounted LIDAR to be used in mapping adverse environments.}
 \end{itemize}
 
 \section{Software Experience}
-ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, Unix utilities, Emacs, and Vim
+ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, standard Unix utilities
 
 \section{Professional Organizations}
 American Geophysical Union, Sigma Xi (Associate Member), Geological Society of America
