--- a/resume.tex
+++ b/resume.tex
@@ -21,14 +21,14 @@
 \section{Research Interests}
 \begin{itemize}
 \item Sediment dynamics in glacial systems.
-\item Application of remote sensing data and geospatial analysis to modeling geological phenomena.
+\item Application of remote sensing and geospatial analysis to modeling geological phenomena.
 \end{itemize}
 
 \section{Professional Experience}
 
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
 \begin{itemize}
-\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative and multi-institutional study to explore aquatic environments beneath the Antarctic Ice Sheet. }Worked closely with project engineers in development of aquisition software and sensor integration. Assisted chief scientist in planning field logistics and operations. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
+\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative study to explore aquatic environments beneath the Antarctic Ice Sheet. }Worked with engineers in developing aquisition software and sensor integration. Assisted chief scientist in coordinating field logistics and operations. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
 \item Mapped seafloor habitats of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
 \item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geomorphology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a statistical classifier. Resulting report and map set published by USGS.}
 \end{itemize}
@@ -67,7 +67,7 @@
 ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, standard Unix utilities
 
 \section{Professional Organizations}
-American Geophysical Union, Sigma Xi (Associate Member), Geological Society of America
+American Geophysical Union, Sigma Xi, Geological Society of America
 
 \section{References}
 \begin{tabular}{@{}p{6cm}p{6cm}p{6cm}}
