--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 \section{Research Interests}
 \begin{itemize}
 \item Sediment dynamics in glacial systems.
-\item Application of remote sensing and geospatial analysis to modeling geological phenomena.
+\item Application of remote sensing and geospatial analysis to modeling geologic phenomena.
 \end{itemize}
 
 \section{Professional Experience}
@@ -29,8 +29,8 @@
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
 \begin{itemize}
 \item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative study to explore aquatic environments beneath the Antarctic Ice Sheet. }Worked with engineers in developing aquisition software and sensor integration. Assisted chief scientist in coordinating field logistics and operations. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
-\item Mapped seafloor habitats of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
-\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geomorphology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a statistical classifier. Resulting report and map set published by USGS.}
+\item Mapped seafloor habitats and geology of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
+\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a suppervised classifier. Resulting report and map set published by USGS.}
 \end{itemize}
 
 
@@ -64,21 +64,8 @@
 \end{itemize}
 
 \section{Software Experience}
-ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, standard Unix utilities
+ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, Unix utilities
 
 \section{Professional Organizations}
 American Geophysical Union, Sigma Xi, Geological Society of America
-
-\section{References}
-\begin{tabular}{@{}p{6cm}p{6cm}p{6cm}}
- \textbf{Thomas Pingel}            & \textbf{John Winans}              &   \textbf{Ross Powell}           \\
- Asst. Professor                   &  Research Associate               &   Professor (Advisor)            \\ 
- Geography                         &  Computer Science                 &   Geology and Env. Geoscience    \\
- Northern Illinois University      &  Northern Illinois University     &   Northern Illinois University   \\ 
- DeKalb, Illinois                  &  DeKalb, Illinois                 &   DeKalb, Illinois               \\
- phone: (815) 753-9208             &  phone: (815) 753-5947            &   phone: (815) 753-7952          \\
- e-mail: tpingel@niu.edu           &  e-mail: jwinans@niu.edu          &   e-mail: rpowell@niu.edu        \\
- \url{www.tpingel.com}             &  \url{faculty.cs.niu.edu/~winans} &                                  \\     
-\end{tabular}
-
 \end{document} 
