--- a/resume.tex
+++ b/resume.tex
@@ -20,8 +20,8 @@
 
 \section{Research Interests}
 \begin{itemize}
-\item Sediment dynamics in glacial systems.
-\item Application of remote sensing and geospatial analysis to modeling geologic phenomena.
+\item Sediment dynamics in glacial environments.
+\item Application of remote sensing and geospatial analysis to geologic mapping and modeling.
 \end{itemize}
 
 \section{Professional Experience}
@@ -30,7 +30,7 @@
 \begin{itemize}
 \item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative study to explore aquatic environments beneath the Antarctic Ice Sheet. }Worked with engineers in developing aquisition software and sensor integration. Assisted chief scientist in coordinating field logistics and operations. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
 \item Mapped seafloor habitats and geology of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
-\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a suppervised classifier. Resulting report and map set published by USGS.}
+\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a supervised classifier. Resulting report and map set published by USGS.}
 \end{itemize}
 
 
