--- a/resume.tex
+++ b/resume.tex
@@ -20,16 +20,16 @@
 
 \section{Research Interests}
 \begin{itemize}
-\item Sediment dynamics in glacial environments.
 \item Application of remote sensing and geospatial analysis to geologic mapping and modeling.
+\item Sediment dynamics in glacial environments.
 \end{itemize}
 
 \section{Professional Experience}
 
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
 \begin{itemize}
-\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative study to explore aquatic environments beneath the Antarctic Ice Sheet. }Worked with engineers in developing aquisition software and sensor integration. Assisted chief scientist in coordinating field logistics and operations. \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.}
-\item Mapped seafloor habitats and geology of Puget Sound as part of The Nature Conservancy's initiative to foster public awarness and conservation of marine environments.
+\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative study to explore aquatic environments beneath the Antarctic Ice Sheet.} \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.} Worked alongside engineers in developing acquisition software and sensor integration. Project responsibilities included instrument and equipment maintenance and operation, report writing, computer and network administration, equipment purchasing and shipping.
+\item Mapped seafloor habitats and geology of Puget Sound as part of The Nature Conservancy's initiative to foster public awareness and conservation of marine environments.
 \item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a supervised classifier. Resulting report and map set published by USGS.}
 \end{itemize}
 
@@ -53,6 +53,7 @@
 \section{Other Experience}
 \begin{itemize}
 \item STEMfest volunteer communicating importance of polar research and organizing educational outreach activities for k-12 students.
+\item Experience troubleshooting and repairing electronics.
 \end{itemize}
 
 \section{Programming Experience}
@@ -60,7 +61,7 @@
 \item Python, C, Matlab, R, BASH, JavaScript, SQL, HTML/CSS
 \item Relevant coursework in geospatial methods and modeling, web mapping, and network applications in C.
 \item Familiar with common libraries for numerical programming, data viz, web mapping, geospatial analysis, signal processing, and statistics.
-\item \href{https://github.com/tohodson/velodyne_tools}{Developed drivers and hardware for a back mounted LIDAR to be used in mapping adverse environments.}
+\item \href{https://github.com/tohodson/velodyne_tools}{Developed drivers and hardware for a backpack mounted LIDAR for mapping adverse environments.}
 \end{itemize}
 
 \section{Software Experience}
