--- a/resume.tex
+++ b/resume.tex
@@ -18,25 +18,39 @@
 \datedsubsection{\href{http://gradworks.umi.com/15/28/1528822.html}{\textbf{MS Geology} \textit{-- Northern Illinois University}}}{2012}
 \datedsubsection{\textbf{BS Geology and Geophysics} \textit{-- University of Wisconsin, Madison}}{2007}
 
-\section{Research Interests}
-\begin{itemize}
-\item Application of remote sensing and geospatial analysis to geologic mapping and modeling.
-\item Sediment dynamics in glacial environments.
-\end{itemize}
-
+%\section{Research Interests}
+%\begin{itemize}
+%\item Application of remote sensing and geospatial analysis to geologic mapping and modeling.
+%\item Sediment dynamics in glacial environments.
+%\end{itemize}
+%
 \section{Professional Experience}
 
 \datedsubsection{Research Assistant, \textit{Northern Illinois University}}{2010--Present}
 \begin{itemize}
-\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an integrative study to explore aquatic environments beneath the Antarctic Ice Sheet.} \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}{Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.} Worked alongside engineers in developing acquisition software and sensor integration. Project responsibilities included instrument and equipment maintenance and operation, report writing, computer and network administration, equipment purchasing and shipping.
-\item Mapped seafloor habitats and geology of Puget Sound as part of The Nature Conservancy's initiative to foster public awareness and conservation of marine environments.
-\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geology of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a supervised classifier. Resulting report and map set published by USGS.}
-\end{itemize}
+\item \href{http://www.wissard.org}{Researcher and technician for WISSARD, an
+  integrative study to explore aquatic environments beneath the Antarctic Ice
+  Sheet.}
+  \href{http://discovermagazine.com/2014/jan-feb/12-the-search-for-life-trapped-under-ice}
+       {Listed \#12 in \textit{Discover}'s Top 100 Science Stories of 2013.} Worked
+       alongside engineers in developing acquisition software and sensor integration.
+       Project responsibilities included maintenance and operation of instruments and equipment,
+       report writing, troubleshooting fiber-optic and copper communications networks, organizing equipment purchases and shipments.
+  
+\item Mapped seafloor habitats and geology of Puget Sound as part of The Nature
+  Conservancy's initiative to foster public awareness and conservation of marine
+  environments. Resulting mapsets in publication with USGS.
 
+\item \href{http://pubs.usgs.gov/sim/3253/}{Mapped seafloor habitats and geology
+  of Glacier Bay National Park from swath bathymetry, seafloor video transects, and a supervised classifier. Resulting report and map set published by USGS.}
+  
+\end{itemize}
 
 \datedsubsection{Mapping Intern, \textit{UCAR}}{August,2014}
 \begin{itemize}
-\item \href{http://www.niutoday.info/2014/04/17/niu-student-lands-coveted-internship-aboard-exploration-ship/}{Sailed as a survey watchstander aboard NOAA's \textit{E/V Okeanos Explorer}. Duties included QA and processing of data collected by the ship's swath and sub-bottom sonars.}
+\item \href{http://www.niutoday.info/2014/04/17/niu-student-lands-coveted-internship-aboard-exploration-ship/}
+  {Sailed as a survey watchstander aboard NOAA's \textit{E/V Okeanos Explorer}.
+  Duties included QA and processing of data collected by the ship's swath and sub-bottom sonars.}
 \end{itemize}
 
 \datedsubsection{Teaching Assistant, \textit{Northern Illinois University}}{2010--2011}
@@ -58,14 +72,15 @@
 
 \section{Programming Experience}
 \begin{itemize}
-\item Python, C, Matlab, R, BASH, JavaScript, SQL, HTML/CSS
+\item Python, BASH, C, Matlab, R, JavaScript, SQL, HTML/CSS
 \item Relevant coursework in geospatial methods and modeling, web mapping, and network applications in C.
-\item Familiar with common libraries for numerical programming, data viz, web mapping, geospatial analysis, signal processing, and statistics.
+\item Familiar with common libraries for numerical programming, data viz,
+  web mapping, geospatial analysis, signal processing, statistics, networking, 
 \item \href{https://github.com/tohodson/velodyne_tools}{Developed drivers and hardware for a backpack mounted LIDAR for mapping adverse environments.}
 \end{itemize}
 
 \section{Software Experience}
-ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, Fledermaus, Microsoft Office, Unix utilities
+ArcGIS (4yrs), Adobe Illustrator, QGIS, GRASS, GMT, Fledermaus, Microsoft Office, Unix utilities
 
 \section{Professional Organizations}
 American Geophysical Union, Sigma Xi, Geological Society of America
